data/derived/comb/progs/unify/prog6295.ml.out
Characters 83-86:
  else helper (x :: acc, n'-1) in 
                    ^^^
Error: This expression has type 'a list * 'b
       but an expression was expected of type 'a list
